# sam3-onnx-cpp

./: .gitignore  README.md  fetch_onnx_models.bat  fetch_onnx_models.sh  fetch_sam3_repo.bat  fetch_sam3_repo.sh
cpp/: CMakeLists.txt
cpp/src/: ArtifactResolver.h  CVHelpers.h  Image.h  SAM3.h  SAM3Image.cpp  SAM3Session.cpp  SAM3Video.cpp  main.cpp  onnx_test_image.cpp  onnx_test_video.cpp  openFileDialog.cpp  openFileDialog.h  openFileDialog.mm
cpp/tests/: ArtifactResolverTests.cpp
export/: onnx_export.py
export/src/: modules.py  sam31_modules.py  utils.py
python/: __init__.py  api_test_image.py  benchmark_encoder_matrix.py  benchmark_image_cpu_variants.py  benchmark_onnx_default.py  benchmark_onnx_presets.py  compare_image_native_vs_onnx.py  compare_native_vs_onnx.py  fetch_sam3_repo.py  inspect_onnx_io.py  local_sam3_config.py  make_dml_compatible.py  onnx_compare_image_worker.py  onnx_runtime_policy.py  onnx_test_image.py  onnx_test_utils.py  onnx_test_video.py  prompt_spec_utils.py  quantize_image_models.py  sam31_native_smoke.py  sam3_onnx_session.py  sam3_revision.py  sweep_onnx_mem_frames.py  sweep_onnx_obj_ptrs.py  validate_onnx_parity.py  validation_cases.example.json
